* IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
* BUGFIX: Fixed KSIEP over TCP failing.
* BUGFIX: Fixed clang static analyze findings.
* IMPROVEMENT: Debian packaging refactored and fixed.
* IMPROVEMENT: ABI version moved from configure.ac to ABI_VERSION file.
* IMPROVEMENT: Added KSI_SignatureBuilder_createSignatureWithAggregationChain function.
* IMPROVEMENT: Removed calendar-based verification from the default verification policy.
* IMPROVEMENT: New verification rule for verifing document hash algorithm.
* IMPROVEMENT: Implemented verification of PKI certificate validity during aggregation time.
* IMPROVEMENT: Rpm packaging spec file moved from "redhat" to "packaging/redhat".
* IMPROVEMENT: Set default PDU version to 2.
Version 3.14

2017-06-13 release(3.14.2207)
* IMPROVEMENT: Unified verifivation error codes. All error code values with single digit are padded with '0' (general error codes have been changed from GEN-* to GEN-0*).
* IMPROVEMENT: Refactored TCP client host information lookup by using getaddrinfo instead of gethostbyname.
* IMPROVEMENT: Support for integration tests test package.
* IMPROVEMENT: Refactored aggregation hash chain chain index continuation verification.
* IMPROVEMENT: Added mandatory comments to deprecation macro.
* IMPROVEMENT: Returning KSI_UNSUPPORTED_PDU_VERSION in case configured PDU version is not supported for given request.
* IMPROVEMENT: Verification of user-provided input hash level.
* IMPROVEMENT: Updated signature internal verification sequence.
* BUGFIX: Correct extender HMAC setting.
* BUGFIX: Added interface for KSI_Header KSI context getter.
* IMPROVEMENT: Added KSI_DataHash memory reuse.

Version 3.13

2017-04-17 release(3.13.2043)
* IMPROVEMENT: Functionality to request configurations from extender / aggregator.
* BUGFIX: Update publications file client pointer when changinh client.
* IMPROVEMENT: Set level correction when input hash level is greater than 0.