@@ -71,6 +71,10 @@ static const struct KSI_hashAlgorithmInfo_st {
 		HASH_ALGO(KSI_HASHALG_SM3, 			"SM3", 			256, 512, 1)
 };
 
+static int ksi_isHashAlgorithmIdValid(int algo_id) {
+	return algo_id >= 0 && algo_id < KSI_NUMBER_OF_KNOWN_HASHALGS && KSI_hashAlgorithmInfo[algo_id].name != NULL;
+}
+
 /**
  *
  */
@@ -100,21 +104,21 @@ void KSI_DataHash_free(KSI_DataHash *hsh) {
  *
  */
 int KSI_isHashAlgorithmTrusted(KSI_HashAlgorithm algo_id) {
-	if (algo_id >= 0 && algo_id < KSI_NUMBER_OF_KNOWN_HASHALGS) {
+	if (ksi_isHashAlgorithmIdValid(algo_id)) {
 		return KSI_hashAlgorithmInfo[algo_id].trusted;
 	}
 	return 0;
 }
 
 unsigned int KSI_getHashLength(KSI_HashAlgorithm algo_id) {
-	if (algo_id >= 0 && algo_id < KSI_NUMBER_OF_KNOWN_HASHALGS) {
+	if (ksi_isHashAlgorithmIdValid(algo_id)) {
 		return (KSI_hashAlgorithmInfo[algo_id].outputBitCount) >> 3;
 	}
 	return 0;
 }
 
 unsigned int KSI_HashAlgorithm_getBlockSize(KSI_HashAlgorithm algo_id) {
-	if (algo_id >= 0 && algo_id < KSI_NUMBER_OF_KNOWN_HASHALGS) {
+	if (ksi_isHashAlgorithmIdValid(algo_id)) {
 		return (KSI_hashAlgorithmInfo[algo_id].blockSize) >> 3;
 	}
 	return 0;
@@ -187,8 +191,8 @@ int KSI_DataHash_fromDigest(KSI_CTX *ctx, KSI_HashAlgorithm algo_id, const unsig
 		goto cleanup;
 	}
 
-	/* Make sure the algorithm is supported. */
-	if (!KSI_isHashAlgorithmSupported(algo_id)) {
+	/* Make sure the algorithm is valid. */
+	if (!ksi_isHashAlgorithmIdValid(algo_id)) {
 		KSI_pushError(ctx, res = KSI_UNAVAILABLE_HASH_ALGORITHM, "Hash algorithm not supported.");
 		goto cleanup;
 	}
@@ -262,7 +266,7 @@ int KSI_DataHash_fromImprint(KSI_CTX *ctx, const unsigned char *imprint, size_t 
  *
  */
 const char *KSI_getHashAlgorithmName(KSI_HashAlgorithm algo_id) {
-	if (algo_id >= 0 && algo_id < KSI_NUMBER_OF_KNOWN_HASHALGS) {
+	if (ksi_isHashAlgorithmIdValid(algo_id)) {
 		return KSI_hashAlgorithmInfo[algo_id].name;
 	}
 	return NULL;
@@ -613,7 +617,8 @@ int KSI_DataHash_createZero(KSI_CTX *ctx, KSI_HashAlgorithm algo_id, KSI_DataHas
 	memset(buf, 0, sizeof(buf));
 	buf[0] = algo_id;
 
-	if (!KSI_isHashAlgorithmSupported(algo_id)) {
+	/* Make sure the hash algorithm id is valid. */
+	if (!ksi_isHashAlgorithmIdValid(algo_id)) {
 		KSI_pushError(ctx, res = KSI_UNAVAILABLE_HASH_ALGORITHM, "Hash algorithm not supported.");
 		goto cleanup;
 	}
